[package]
name = "dfm"
description = "A dotfile manager for lazy people and pair programmers."
license = "Apache-2.0"
version = "10.3.5"
homepage = "https://github.com/chasinglogic/dfm"
documentation = "https://github.com/chasinglogic/dfm"
repository = "https://github.com/chasinglogic/dfm"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive", "cargo"] }
clap_complete = "4.5.33"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.11.0"
rustyline = "14.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
shlex = "1.3.0"
text_io = "0.1.12"
walkdir = "2.5.0"
